# Rayleigh_simulation

./: README.md  cuda-proj2.ipynb
cuda-rt/: CMakeLists.txt
cuda-rt/include/: rt_types.hpp
cuda-rt/scripts/: run.sh  visualize.py
cuda-rt/src/: boundary.cu  cfl.cu  derivatives.cu  init.cu  main.cu  primitive.cu  rhs.cu  rhs_shared.cu  update.cu  utils.cu
